RESOLVED FIXED137478
[EFL] Call requestScrollPositionUpdate() instead of delegatedScrollRequested() in ScrollView::scrollTo()
https://bugs.webkit.org/show_bug.cgi?id=137478
Summary [EFL] Call requestScrollPositionUpdate() instead of delegatedScrollRequested(...
Gyuyoung Kim
Reported 2014-10-06 22:15:35 PDT
As r174380 did, ScrollView::scrollTo() also calls requestScrollPositionUpdate() instead of delegatedScrollRequested(). Then delegatedScrollRequested() will be only called by ScrollingCoordinatorCoordinatedGraphics::requestScrollPositionUpdate(), and it needs to be merged by existing other scroll function.
Attachments
Patch (1.68 KB, patch)
2014-10-06 22:16 PDT, Gyuyoung Kim
no flags
Gyuyoung Kim
Comment 1 2014-10-06 22:16:36 PDT
WebKit Commit Bot
Comment 2 2014-10-07 21:51:36 PDT
Comment on attachment 239387 [details] Patch Clearing flags on attachment: 239387 Committed r174416: <http://trac.webkit.org/changeset/174416>
WebKit Commit Bot
Comment 3 2014-10-07 21:51:38 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.