[EFL] Call requestScrollPositionUpdate() instead of delegatedScrollRequested() in ScrollView::scrollTo() https://bugs.webkit.org/show_bug.cgi?id=137478

Reviewed by Benjamin Poulain.

As r174380 did, ScrollView::scrollTo() also calls requestScrollPositionUpdate() instead of delegatedScrollRequested().
delegatedScrollRequested() will be only called by requestScrollPositionUpdate(), and it needs to be merged by existing
other scroll request function.

No new tests, no behavior changes.

* platform/ScrollView.cpp:
(WebCore::ScrollView::scrollTo):


Canonical link: https://commits.webkit.org/155327@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@174416 268f45cc-cd09-0410-ab3c-d52691b4dbfc